[tool.poetry]
name        = "hadfit"
version     = "0.1.0"
description = ""
authors     = ["Sergio Chaves Garcia-Mascaraque <sergiozteskate@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21.2"
scipy = "^1.7.1"
lmfit = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

